# MoaPDF

./: .gitignore  README.md  index.html  package-lock.json  package.json  pdf_blank_insert.py
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: smoke_test.py
