[package]
name = "moapdf"
version = "0.1.0"
description = "MoaPDF local PDF toolkit"
authors = ["Moaxiy"]
edition = "2021"

[lib]
name = "moapdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

